--- a/index.ipynb
+++ b/index.ipynb
@@ -44,25 +44,12 @@
     }
    ],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.preprocessing import Normalizer\n",
-    "from sklearn.tree import DecisionTreeClassifier \n",
-    "from sklearn.metrics import accuracy_score, roc_curve, auc\n",
-    "from sklearn import tree \n",
-    "from sklearn.externals.six import StringIO  \n",
-    "from IPython.display import Image  \n",
-    "from sklearn.tree import export_graphviz\n",
-    "import pydotplus\n",
-    "import pandas as pd \n",
     "import numpy as np\n",
-    "%matplotlib inline\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
-    "\n",
+    "import pandas as pd\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.metrics import roc_curve, auc\n",
     "plt.style.use('seaborn')"
    ]
