--- a/index.ipynb
+++ b/index.ipynb
@@ -74,12 +74,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "features=pd.read_csv('features.csv')\n",
-    "target="
+    "target=pd.read_csv('target.csv')"
    ]
   },
   {
