Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -74,17 +74,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "features=pd.read_csv('features.csv')\n",
-    "target=pd.read_csv('target.csv')"
+    "X=pd.read_csv('features.csv')\n",
+    "y=pd.read_csv('target.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -93,13 +93,13 @@
        "(891, 13)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "features.shape"
+    "X.shape"
    ]
   },
   {
