--- a/index.ipynb
+++ b/index.ipynb
@@ -370,7 +370,8 @@
    "source": [
     "# Create a 70/30 split for given X and y \n",
     "\n",
-    "\n",
+    "# Create a 70/30 split for given X and y \n",
+    "x_train, x_test, y_train, y_test = train_test_split(feat, target, test_size=0.3)\n",
     "# Your code here "
    ]
   },
