--- a/index.ipynb
+++ b/index.ipynb
@@ -392,7 +392,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dt = DecisionTreeClassifier(criterion='entropy')\n",
+    "dt.fit(x_train, y_train)\n"
+   ]
   },
   {
    "cell_type": "code",
