--- a/index.ipynb
+++ b/index.ipynb
@@ -424,10 +424,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7252504076403447"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Make predictions using test set \n",
+    "y_pred = dt.predict(x_test)\n",
+    "# Check the AUC of predictions\n",
+    "false_positive_rate, true_positive_rate, thresholds = roc_curve(y_test, y_pred)\n",
+    "roc_auc = auc(false_positive_rate, true_positive_rate)\n",
+    "roc_auc"
+   ]
   },
   {
    "cell_type": "code",
