Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -448,6 +448,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6990740740740741"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Make predictions using test set \n",
+    "\n",
+    "\n",
+    "# Your code here \n",
+    "\n",
+    "\n",
+    "# Check the AUC of predictions\n",
+    "\n",
+    "\n",
+    "# Your code here "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
