Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -464,7 +464,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -502,6 +504,17 @@
     "plt.xlabel('Tree depth')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Training error decreases with increasing tree depth - clear sign of over fitting \n",
+    "# Test error increases after depth=3 - nothing more to learn from deeper trees (some fluctuations, but not stable)\n",
+    "# Optimal value seen here is 3"
    ]
   },
   {
