--- a/index.ipynb
+++ b/index.ipynb
@@ -537,7 +537,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "min_sample_splits = np.linspace(1, 32, 32, endpoint=True)\n",
+    "min_sample_splits = np.linspace(0.1, 1, .1, endpoint=True)\n",
     "train_results = []\n",
     "test_results = []\n",
     "for max_depth in max_depths:\n",
