Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -540,7 +540,7 @@
     "min_sample_splits = np.linspace(0.1, 1, 10, endpoint=True)\n",
     "train_results = []\n",
     "test_results = []\n",
-    "for max_depth in max_depths:\n",
+    "for min_sample_split in min_sample_splits:\n",
     "   dt = DecisionTreeClassifier(criterion='entropy', max_depth=max_depth)\n",
     "   dt.fit(x_train, y_train)\n",
     "   train_pred = dt.predict(x_train)\n",
