--- a/index.ipynb
+++ b/index.ipynb
@@ -625,7 +625,7 @@
     "plt.plot(max_depths, train_results, 'b', label='Train AUC')\n",
     "plt.plot(max_depths, test_results, 'r', label='Test AUC')\n",
     "plt.ylabel('AUC score')\n",
-    "plt.xlabel('Tree depth')\n",
+    "plt.xlabel('Min. Sample splits')\n",
     "plt.legend()\n",
     "plt.show()"
    ]
