--- a/index.ipynb
+++ b/index.ipynb
@@ -622,8 +622,8 @@
     "   # Add auc score to previous test results\n",
     "   test_results.append(roc_auc)\n",
     "plt.figure(figsize=(12,6))\n",
-    "plt.plot(max_depths, train_results, 'b', label='Train AUC')\n",
-    "plt.plot(max_depths, test_results, 'r', label='Test AUC')\n",
+    "plt.plot(min_samples_splits, train_results, 'b', label='Train AUC')\n",
+    "plt.plot(min_samples_splits, test_results, 'r', label='Test AUC')\n",
     "plt.ylabel('AUC score')\n",
     "plt.xlabel('Min. Sample splits')\n",
     "plt.legend()\n",
