--- a/index.ipynb
+++ b/index.ipynb
@@ -603,11 +603,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "min_sample_splits = np.linspace(0.1, 1, 10, endpoint=True)\n",
+    "min_samples_leafs = np.linspace(0.1, 1, 10, endpoint=True)\n",
     "train_results = []\n",
     "test_results = []\n",
-    "for min_samples_split in min_samples_splits:\n",
-    "   dt = DecisionTreeClassifier(criterion='entropy', min_samples_split=min_samples_split)\n",
+    "for min_samples_leaf in min_samples_leafs:\n",
+    "   dt = DecisionTreeClassifier(criterion='entropy', min_samples_leaf=min_samples_split)\n",
     "   dt.fit(x_train, y_train)\n",
     "   train_pred = dt.predict(x_train)\n",
     "   false_positive_rate, true_positive_rate, thresholds = roc_curve(y_train, train_pred)\n",
