Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -680,7 +680,7 @@
    ],
    "source": [
     "# Find the best value for optimal maximum feature size\n",
-    "min_samples_leafs = np.linspace(0.1, 0.5, 5, endpoint=True)\n",
+    "max_features = np.linspace(0.1, 0.5, 5, endpoint=True)\n",
     "train_results = []\n",
     "test_results = []\n",
     "for min_samples_leaf in min_samples_leafs:\n",
