Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -680,11 +680,11 @@
    ],
    "source": [
     "# Find the best value for optimal maximum feature size\n",
-    "max_features = np.linspace(1, 0.5, 5, endpoint=True)\n",
+    "max_features = np.linspace(0.1, 0.5, 5, endpoint=True)\n",
     "train_results = []\n",
     "test_results = []\n",
-    "for max_feature_leaf in max_features:\n",
-    "   dt = DecisionTreeClassifier(criterion='entropy', max_feature=max_feature)\n",
+    "for min_samples_leaf in min_samples_leafs:\n",
+    "   dt = DecisionTreeClassifier(criterion='entropy', min_samples_leaf=min_samples_leaf)\n",
     "   dt.fit(x_train, y_train)\n",
     "   train_pred = dt.predict(x_train)\n",
     "   false_positive_rate, true_positive_rate, thresholds = roc_curve(y_train, train_pred)\n",
