Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -680,7 +680,7 @@
    ],
    "source": [
     "# Find the best value for optimal maximum feature size\n",
-    "max_features = np.linspace(1, 0.5, 5, endpoint=True)\n",
+    "max_features = np.linspace(1, 12, 12, endpoint=True)\n",
     "train_results = []\n",
     "test_results = []\n",
     "for max_feature_leaf in max_features:\n",
@@ -697,10 +697,10 @@
     "   # Add auc score to previous test results\n",
     "   test_results.append(roc_auc)\n",
     "plt.figure(figsize=(12,6))\n",
-    "plt.plot(min_samples_leafs, train_results, 'b', label='Train AUC')\n",
+    "plt.plot(max_features, train_results, 'b', label='Train AUC')\n",
     "plt.plot(min_samples_leafs, test_results, 'r', label='Test AUC')\n",
     "plt.ylabel('AUC score')\n",
-    "plt.xlabel('min_samples_leafs')\n",
+    "plt.xlabel('max_features')\n",
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
